test_suite/tests/ui/remote/bad_getter.stderr
error: failed to parse path: "~~~"
  --> $DIR/bad_getter.rs:10:10
   |
10 | #[derive(Serialize)]
   |          ^^^^^^^^^

error: aborting due to previous error

